--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -3,4 +3,4 @@
 github: mariomaaren
 ko_fi:  maaren
 buy_me_a_coffee: maaren
-custom:  https://paypal.me/hamburger3000?country.x=NL&locale.x=nl_NL
+paypal:  https://paypal.me/hamburger3000
