--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -3,4 +3,4 @@
 github: mariomaaren
 ko_fi:  maaren
 buy_me_a_coffee: maaren
-paypal:  https://paypal.me/hamburger3000
+custom:  https://paypal.me/hamburger3000
